Update Docker to Java 11
This appears to incidentally fix an inability to load the /ig endpoint